# mcpproxy-go

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  .pre-commit-config.yaml  .worktree-README.md  AGENTS.md  ARCHITECTURE.md  AUTOUPDATE.md  BACKGROUND_STARTUP.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY_SUMMARY.md  CONTRIBUTING.md  DEBUG_DOCKER_TIMEOUTS.md  DELIVERY_VERIFICATION.md  DESIGN.md  Dockerfile  GEMINI_COMPATIBILITY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  MACOS_INSTALL.md  MANUAL_TESTING.md  MENU_FIXES_SUMMARY.md  Makefile  OAUTH_BUG_ANALYSIS.md  PHASE6-COMPLETE.md  PHASE6-STATUS.md  PHASE7-PLAN.md  PLAN_NON_BLOCKING_TOOL_COUNTS.md  PR_101_SUMMARY.md  PR_BODY.md  PR_DRAFT.md  QUARANTINE_IMPLEMENTATION.md  RACE_CONDITION_FIX_SUMMARY.md  README.md  REFACTORING.md  REFACTORING_2.md  (+38 more)
.github/: .golangci.yml  CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml  labels.yml  pull_request_template.md
.osgrep/: server.json
.run/: Frontend Vite.run.xml  MCPProxy Backend.run.xml  Run Frontend + Backend.run.xml
bench/: .gitignore  README.md  armindex.go  armindex_test.go  armrun.go  armrun_test.go  breakeven.go  breakeven_test.go  canonical.go  canonical_test.go  docker-compose.yml  flipgate.go  flipgate_test.go  lapcheck.go  lapcheck_test.go  live.go  live_report.go  (+23 more)
eval/: .gitignore  Makefile  README.md  env_template.txt  pyproject.toml
eval/adk_agents/: __init__.py  agent.py  test_agent.py
eval/configs/: mcpproxy_eval.json
eval/src/mcpproxy_eval/: __init__.py
eval/src/mcpproxy_eval/evaluation/: __init__.py
eval/src/mcpproxy_eval/registry/: __init__.py  server.py
eval/src/mcpproxy_eval/servers/: __init__.py  calculator.py  color.py  dice.py  jokes.py  morse.py  random.py  restaurant.py  time.py  translator.py  weather.py
(+2394 files in other folders)
